feat: proof of concept review details page
Updated 'getReviewDetails' controller and 'review-details' view to
display review information vs book information.

fix: 'book-details' view error over google books result not including
authors

If google books does not list any authors (such as for published
government documents) the loop to create the comma-separated string
would break

--- a/views/books/book-details.ejs
+++ b/views/books/book-details.ejs
@@ -25,15 +25,19 @@
                                         <h2 class="book-title"><%= currentBook.title %></h2>
                                         <%- include('../partials/display-stars', {rating: currentBook.averageRating, numberOfRatings: currentBook.numberOfRatings, resourceType: 'Book'}); %>
                                         <h3 class="book-authors">
-                                            <% let combinedAuthors = '' %>
-                                            <% for(let author of googleBook.volumeInfo.authors) { %>
-                                                <% if(googleBook.volumeInfo.authors.indexOf(author) !== (googleBook.volumeInfo.authors.length -1)) { %>
-                                                    <% combinedAuthors += `${author}, ` %>
-                                                <% } else { %>
-                                                    <% combinedAuthors += author %>
+                                            <% if (typeof googleBook.volumeInfo.length > 0) { %>
+                                                <% let combinedAuthors = '' %>
+                                                <% for(let author of googleBook.volumeInfo.authors) { %>
+                                                    <% if(googleBook.volumeInfo.authors.indexOf(author) !== (googleBook.volumeInfo.authors.length -1)) { %>
+                                                        <% combinedAuthors += `${author}, ` %>
+                                                    <% } else { %>
+                                                        <% combinedAuthors += author %>
+                                                    <% } %>
                                                 <% } %>
+                                                <%= combinedAuthors %>
+                                            <% } else { %>
+                                                <%= googleBook.volumeInfo.authors %>
                                             <% } %>
-                                            <%= combinedAuthors %>
                                         </h3>
                                         <% if(currentUser.role = 'owner') { %>
                                             <div class="row" id="owner-controls">
