--- a/views/reviews/review-details.ejs
+++ b/views/reviews/review-details.ejs
@@ -24,97 +24,30 @@
                                     <div class="col">
                                         <h2 class="book-title">Review of <%= currentReview.book.title %></h2>
                                         <%- include('../partials/display-stars', {rating: currentReview.starRating, resourceType: 'Review'}); %>
-                                        
-                                        <% if(currentUser.role = 'owner') { %>
-                                            <div class="row" id="owner-controls">
-                                                <% if (currentReview.status.active) { %>
-                                                <div class="col">
-                                                    <button type="button" class="btn btn-warning my-1" data-toggle="modal" data-target="#confirm-unpublish-modal">Unpublish review</button>
-                                                </div>
-                                                <!-- Modal -->
-                                                <div class="modal fade" id="confirm-unpublish-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="confirm-unpublish-label" aria-hidden="true">
-                                                    <div class="modal-dialog">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h5 class="modal-title" id="confirm-unpublish-label">Unpublish Review?</h5>
-                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <p>Are you sure you want to unpublish this review? It will no longer be publicly visible, nor editable by you, unless you re-publish the review.</p>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                            <form action="/reviews/<%= currentReview.id %>/unpublish?_method=PUT" class="unpublish-book" id="unpublish-book" method="post">
-                                                                <button class="btn btn-warning my-1">Unpublish Review</button>
-                                                            </form>
-                                                        </div>
-                                                    </div>
-                                                    </div>
-                                                </div>
-            
-                                                <% } else { %>
-                                                    <div class="col">
-                                                        <button type="button" class="btn btn-success my-1" data-toggle="modal" data-target="#confirm-publish-modal">Re-publish review</button>
-                                                    </div>
-                                                    <!-- <div class="col">
-                                                        <button type="button" class="btn btn-danger my-1" data-toggle="modal" data-target="#confirm-delete-modal">Delete book</button>
-                                                    </div> -->
-                                                    <!-- Modal -->
-                                                    <div class="modal fade" id="confirm-publish-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="confirm-unpublish-label" aria-hidden="true">
-                                                        <div class="modal-dialog">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h5 class="modal-title" id="confirm-publish-label">Re-publish Review</h5>
-                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                            </div>
-                                                            <div class="modal-body">
-                                                                <p>Are you sure you want to publish this review? The book will become available for you to edit, and if set to 'public', for other users to see. This action *can* be undone.</p>
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                                <form action="/review/<%= currentReview.id %>/publish?_method=PUT" class="publish-review" id="publish-review" method="post">
-                                                                    <button class="btn btn-success my-1">Re-publish Review</button>
-                                                                </form>
-                                                            </div>
-                                                        </div>
-                                                        </div>
-                                                    </div>
-                
-                                                    <!-- Modal -->
-                                                    <!-- <div class="modal fade" id="confirm-delete-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="confirm-delete-label" aria-hidden="true">
-                                                        <div class="modal-dialog">
-                                                            <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h5 class="modal-title" id="confirm-delete-label">Delete Book?</h5>
-                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                            </div>
-                                                            <div class="modal-body">
-                                                                <p>Are you sure you want to delete this book? The book is already unpublished, so no new reviews can be created for this book. </p>
-                                                                <p>All user-created reviews associated with this book will be permanently removed, and no new reviews for this book can be created. </p>
-                                                                <p><strong>This action *CANNOT* be undone.</strong></p>
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                                <form action="/books/<%#= currentReview.id %>/unpublish?_method=DELETE" class="delete-book" id="delete-book"  method="post">
-                                                                    <button class="btn btn-danger my-1">Delete book</button>
-                                                                </form>
-                                                            </div>
-                                                            </div>
-                                                        </div>
-                                                    </div> -->
-                
-                                                <% } %>
-                                            </div>
-                                        <% } %>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="row mt-2">
                                     <div class="col">
                                         <% if (googleBook.saleInfo.buyLink) { %>
                                             <a href="<%= googleBook.saleInfo.buyLink %>" class="buy-on-google-books" target="_blank">Buy on Google Books</a>
-                                            |
                                         <% } %>
-                                        <a href="/reviews/new/<%= currentReview.id %>" class="new-review">Edit Review</a>
+                                        <% if (currentReview.author.id === currentUser.id) { %>
+                                            | <a href="/reviews/new/<%= currentReview.id %>" class="new-review">Edit Review</a>
+                                        <% } %>
+                                    </div>
+                                </div>
+                                <div class="row reading-journey mt-2">
+                                    <div class="col date-started">
+                                        Started reading: <%= currentReview.bookStartedDate.toLocaleDateString('en-US', dateStringOptions); %>
+                                    </div>
+                                    <div class="col date-finished">
+                                        <% if (!currentReview.bookFinished && currentReview.bookFinishedDate) { %>
+                                            Re-shelved: <%= currentReview.finishedDate.toLocaleDateString('en-US', dateStringOptions); %>
+                                        <% } else if (!currentReview.bookFinished && !currentReview.bookFinishedDate) { %>
+                                            Currently Reading
+                                        <% } else if (currentReview.bookFinished) { %> 
+                                            Finished Reading: <%= currentReview.bookFinishedDate.toLocaleDateString('en-US', dateStringOptions); %>
+                                        <% } %>
                                     </div>
                                 </div>
                             </div>
