--- a/views/reviews/review-details.ejs
+++ b/views/reviews/review-details.ejs
@@ -1,17 +1,35 @@
 <%- include( '../partials/header') %> 
 <div class="container">
     <div class="row">
-        <!-- <section class="col-md-4" id="review-tag-cloud">
+        <section class="col-md-3" id="review-tags">
             <div class="row">
                 <div class="col">
-                    <h2>Tags</h2>
-                    
+                    <!-- <h2>Tags</h2> -->
+                    <div class="row mt-1">
+                        <div class="col">
+                            <h4>Your Tags</h4>
+                            <p>
+                                <% for (let tag of currentReview.tags) { %> 
+                                    <% if (currentReview.tags.indexOf(tag) < currentReview.tags.length - 1) { %>
+                                        <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a>, 
+                                    <% } else { %>
+                                        <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a>
+                                    <% } %>
+                                <% } %>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h4>Popular Tags</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section> -->
-        <section class="col" id="review-details">
+        </section>
+        <section class="col-md-9" id="review-details">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col">
                     <div class="card">
                         <div class="row p-1">
                             <div class="col-md-4 col-lg-3 cover-image">
@@ -72,6 +90,14 @@
                     </div>
                 </div>
             </div>
+        </section>
+    </div>
+    <div class="row mt-3">
+        <section class="col books-like-this">
+            <h4>Similar books you may enjoy</h4>
+        </section>
+        <section class="col by-this-author">
+            <h4>Other books by this author</h4>
         </section>
     </div>
 </div>
