--- a/views/reviews/review-details.ejs
+++ b/views/reviews/review-details.ejs
@@ -10,21 +10,17 @@
                             <h4>Your Tags</h4>
                             <p>
                                 <% for (let tag of currentReview.tags) { %> 
-                                    <% if (currentReview.tags.indexOf(tag) < currentReview.tags.length - 1) { %>
-                                        <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a>, 
-                                    <% } else { %>
-                                        <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a>
-                                    <% } %>
+                                    <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a><%= currentReview.tags.indexOf(tag) < currentReview.tags.length - 1 ? ', ' : '' %>
                                 <% } %>
                             </p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <h4>Popular Tags</h4>
+                            <h4>Popular Tags for This Book</h4>
                             <% for (let tag of popularTags) { %>
                                 <% if (tag.count > 1) { %>
-                                    <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a> (<%= tag.count %>) <%= popularTags.indexOf(tag) < popularTags.length - 1 ? ', ' : '' %>
+                                    <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a>&nbsp;(<%= tag.count %>)<%= popularTags.indexOf(tag) < popularTags.length - 1 ? ', ' : '' %>
                                 <% } %>
                             <% } %>
                         </div>
@@ -45,7 +41,7 @@
                             <div class="col-md-8 col-lg-9 title-author-rating">
                                 <div class="row">
                                     <div class="col">
-                                        <h2 class="book-title">Review of <%= currentReview.book.title %></h2>
+                                        <h2 class="book-title"><%= currentReview.author.id === currentUser.id ? 'Your ' : currentReview.author.username + '\'s ' %>Review of <%= currentReview.book.title %></h2>
                                         <%- include('../partials/display-stars', {rating: currentReview.starRating, resourceType: 'Review'}); %>
                                     </div>
                                 </div>
@@ -55,7 +51,7 @@
                                             <a href="<%= googleBook.saleInfo.buyLink %>" class="buy-on-google-books" target="_blank">Buy on Google Books</a>
                                         <% } %>
                                         <% if (currentReview.author.id === currentUser.id) { %>
-                                            | <a href="/reviews/new/<%= currentReview.id %>" class="new-review">Edit Review</a>
+                                            | <a href="/reviews/edit/<%= currentReview.id %>" class="new-review">Edit Review</a>
                                         <% } %>
                                     </div>
                                 </div>
