--- a/views/reviews/review-edit.ejs
+++ b/views/reviews/review-edit.ejs
@@ -65,36 +65,53 @@
                                                 Started
                                             </label>
                                         </div>
-                                        <input type="date" name="review[bookStartedDate]" id="bookStartedDate" value="<%= new Date(currentReview.bookStartedDate.toLocaleDateString('en-US',{})).toISOString().split('T')[0] %>" class="form-control">
+                                        <input type="date" name="review[bookStartedDate]" id="bookStartedDate" class="form-control" 
+                                            value="<%= new Date(currentReview.bookStartedDate.toLocaleDateString('en-US',{})).toISOString().split('T')[0] %>">
                                     </div>
                                     <div class="col-12 col-md-6 date-finished input-group">
                                             <% if (!currentReview.bookFinished && currentReview.bookFinishedDate) { %>
                                                 <div class="input-group-prepend">
                                                     <label class="input-group-text" for="bookFinishedDate">Re-shelved</label> 
                                                 </div>
-                                                <input type="date" name="review[bookFinishedDate]" id="bookFinishedDate" class="form-control" value="<%= new Date(currentReview.bookFinishedDate.toLocaleDateString('en-US', {})).toISOString().split('T')[0] %>" >
+                                                <input type="date" name="review[bookFinishedDate]" id="bookFinishedDate" class="form-control" 
+                                                    value="<%= new Date(currentReview.bookFinishedDate.toLocaleDateString('en-US', {})).toISOString().split('T')[0] %>" >
                                             <% } else if (!currentReview.bookFinished && !currentReview.bookFinishedDate) { %>
                                                 Currently Reading
                                             <% } else if (currentReview.bookFinished) { %>
                                                 <div class="input-group-prepend">
                                                     <label class="input-group-text" for="bookFinishedDate">Finished</label>
                                                 </div>
-                                                <input type="date" name="review[bookFinishedDate]" id="bookFinishedDate" class="form-control" value="<%= new Date(currentReview.bookFinishedDate.toLocaleDateString('en-US', {})).toISOString().split('T')[0] %>">
+                                                <input type="date" name="review[bookFinishedDate]" id="bookFinishedDate" class="form-control" 
+                                                    value="<%= new Date(currentReview.bookFinishedDate.toLocaleDateString('en-US', {})).toISOString().split('T')[0] %>">
                                             <% } %>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col">
+                                        <div class="form-check">
+                                            <input type="checkbox" name="review[bookFinished]" id="wasBookFinished" class="form-check-input" <%= !currentReview.bookFinished && currentReview.bookFinishedDate ? 'checked' : '' %>>
+                                            <label for="wasBookFinished" class="form-check-label">I re-shelved this book without finishing it</label>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row p-1">
-                            <div class="col card-body">
+                        <div class="form-row p-1">
+                            <div class="col form-group">
                                 <hr class=" mt-0"/>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <label for="reviewTitle" class="input-group-text">Title</label>
+                                    </div>
+                                    <input type="text" name="review[title]" id="reviewTitle" class="form-control" value="<%= currentReview.title %>">
+                                </div>
+                                <div class="form-group mt-3">
+                                    <label for="reviewText" class="input-group-text">Body</label>
+                                    <!-- <div class="input-group-prepend">
+                                    </div> -->
+                                    <textarea name="review[text]" id="reviewText" class="form-control" rows="10" placeholder="<%= currentReview.text ? '' : 'Write your review here' %>"><%= currentReview.text ? currentReview.text : '' %></textarea>
+                                </div>
                                 <p class="card-text">
-                                    <h4><%= currentReview.title %></h4>
-                                    <% if(currentReview.text) { %>
-                                        <%- currentReview.text %>
-                                    <% } else { %>
-                                        <p class="no-description">No text was included in this review</p>
-                                    <% } %>
                                     <a href="<%= googleBook.volumeInfo.canonicalVolumeLink %>" target="_blank" class="powered-by-google py-2"><img src="/images/poweredbygoogle.png" alt="Powered by Google"></a>
                                 </p>
                             </div>
