--- a/views/reviews/review-edit.ejs
+++ b/views/reviews/review-edit.ejs
@@ -111,7 +111,8 @@
                                     </div> -->
                                     <textarea name="review[text]" id="reviewText" class="form-control" rows="10" placeholder="<%= currentReview.text ? '' : 'Write your review here' %>"><%= currentReview.text ? currentReview.text : '' %></textarea>
                                 </div>
-                                <p class="card-text">
+                                <button type="submit" class="btn btn-primary">Save</button>
+                                <p class="card-text mt-2">
                                     <a href="<%= googleBook.volumeInfo.canonicalVolumeLink %>" target="_blank" class="powered-by-google py-2"><img src="/images/poweredbygoogle.png" alt="Powered by Google"></a>
                                 </p>
                             </div>
