feat: add editable list of tags to 'review-edit'
Displays tags for current review, can be removed (simple vanilla JS),
will work on being able to add tags either by search or from 'popular
tags' section later

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,3 +54,23 @@ a.powered-by-google {
 form.unpublish-book, form.delete-book {
   display: inline;
 }
+
+.tag {
+  display: inline;
+}
+
+.tag-checkbox {
+  display: none;
+}
+
+.tag-label {
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  background-color: #e9ecef;
+  padding: .5em;
+}
+
+.remove-tag-x {
+  font-weight: bold;
+  cursor: pointer;
+}
